--- a/opd.html
+++ b/opd.html
@@ -55,7 +55,7 @@
                    </select>
                 </div>
                 <div class="inputBox">
-                   <input type="submit" value="send" name="">
+                   <button type="submit">Submit</button>
                 </div>
             </form>
         </div>
