--- a/index.html
+++ b/index.html
@@ -22,13 +22,8 @@
             <li><a href="#banner" onclick="toggleMenu();">Home</a></li>
             <li><a href="#about" onclick="toggleMenu();">About</a></li>
             <li><a href="https://heathisimportantforus.blogspot.com/">Blog</a></li>
-            <div class="dropdown">
-                <li class="dropbtn">Login/Signup</li>
-                <div class="dropdown-content">
-                    <a href="doc-login.html"> As Doctor</a>
-                    <a href="user-login.html"> As User</a>
-                </div>
-            </div>
+            <li><a href="doc-login.html">Doctor Login</a></li>
+            <li><a href="user-login.html">Patient Login</a></li>
         </ul>
     </header>
     <div id="progressbar"></div>
@@ -75,7 +70,7 @@
             </div>
             <div class="col50">
                 <div class="imgBx">
-                    <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_4FGi6N.json" background="transparent" speed="1" style="width: 600px; height: 600px;" loop autoplay id="image"></lottie-player>
+                    <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_4FGi6N.json" background="transparent" speed="1"  loop autoplay id="image"></lottie-player>
                 </div>
             </div>
         </div>
@@ -97,7 +92,7 @@
             </div>
             <div class="col50">
                 <div class="imgBx">
-                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_42B8LS.json" background="transparent" speed="1" style="width: 600px; height: 600px;" loop autoplay id="image"></lottie-player>
+                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_42B8LS.json" background="transparent" speed="1" loop autoplay id="image"></lottie-player>
                 </div>
             </div>
         </div>
