--- a/patlog.html
+++ b/patlog.html
@@ -70,7 +70,7 @@
             </div>
             <div class="col50">
                 <div class="imgBx">
-                    <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_4FGi6N.json" background="transparent" speed="1" style="width: 600px; height: 600px;" loop autoplay></lottie-player>
+                    <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_4FGi6N.json" background="transparent" speed="1"  loop autoplay></lottie-player>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
             </div>
             <div class="col50">
                 <div class="imgBx">
-                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_42B8LS.json" background="transparent" speed="1" style="width: 600px; height: 600px;" loop autoplay></lottie-player>
+                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_42B8LS.json" background="transparent" speed="1"  loop autoplay></lottie-player>
                 </div>
             </div>
         </div>
