--- a/doc-login.html
+++ b/doc-login.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="user signinBx">
                 <div class="imgBx">
-                    <img src="doctor.svg" height="400px" width="400px">
+                    <img src="doctor.svg" height="100%" width="80%">
                 </div>
                 <div class="formBx">
                     <form>
@@ -43,7 +43,7 @@
                     </form>
                 </div>
                 <div class="imgBx">
-                    <img src="heart.svg" height="400px" width="400px">
+                    <img src="heart.svg" height="100%" width="80%">
                 </div>
 
             </div>
